# compiler-kit

./: CMakeLists.txt  test.cpp
include/: ALphabet.hpp  ErrorDescriptor.hpp  Expression.hpp  ExpressionParser.hpp  ExpressionType.hpp  Lexeme.hpp  LexemeType.hpp  Operator.hpp  StringTools.hpp  Token.hpp  TokenType.hpp
src/: ALphabet.cpp  ErrorDescriptor.cpp  Expression.cpp  ExpressionParser.cpp  Lexeme.cpp  Operator.cpp  StringTools.cpp  Token.cpp
